--- a/Pages/Impianti.razor
+++ b/Pages/Impianti.razor
@@ -6,6 +6,8 @@
 @using BlazorApp1.Models
 @using System.Net.Http.Json
 
+@using BlazorApp1.Shared;
+
 <h3 class="mt-3 mb-4">Gestione Impianti</h3>
 
 @if (!Loaded)
