--- a/Shared/ImpiantoCard.razor
+++ b/Shared/ImpiantoCard.razor
@@ -19,7 +19,7 @@
             </div>
         }
 
-        <span class="badge bg-dark">@Impianto.monitors.Count device</span>
+        <span class="badge bg-dark">@Impianto.monitors.Count monitors</span>
     </div>
 
     <div class="card-footer bg-transparent d-flex justify-content-between">
