--- a/Pages/Impianti.razor
+++ b/Pages/Impianti.razor
@@ -8,7 +8,8 @@
 
 @using BlazorApp1.Shared;
 
-<h3 class="mt-3 mb-4">Gestione Impianti</h3>
+<!-- <h3 class="mt-3 mb-4">Gestione Impianti</h3> -->
+
 
 @if (!Loaded)
 {
