--- a/Pages/ImpiantoDettaglio.razor
+++ b/Pages/ImpiantoDettaglio.razor
@@ -1,4 +1,4 @@
-﻿@page "/impianto/{User}/{Id}"
+﻿@page "/impianto/{User}/{IdImpianto}"
 @inject HttpClient Http
 @inject NavigationManager Nav
 @inject IJSRuntime JS
