--- a/Pages/Impianti.razor
+++ b/Pages/Impianti.razor
@@ -44,6 +44,9 @@
                         @onclick="() => AddImpianto(cliente)">
                     <i class="bi bi-plus-circle"></i> Nuovo Impianto
                 </button>
+
+                <button class="button-a"> Button a </button>
+
             </div>
 
             @if (impiantiCliente.Count == 0)
