--- a/css/app.css
+++ b/css/app.css
@@ -191,3 +191,29 @@ code {
     font-weight: bold;
     font-size: 1.2rem;
 }
+
+.button-a {
+    border: none;
+    background-color: #F891B3;
+    color: #ffff;
+    padding: 10px 20px;
+    font-size: 20px;
+    width: 200px;
+    border-radius: 10px;
+    margin: auto;
+    position: relative;
+    box-shadow: 5px 5px 5px #FBC1D4;
+    transition: all 0.3s ease;
+}
+
+.button-a:hover {
+    box-shadow: 0px 2px 20px #A20A3C;
+    top: 3px;
+}
+
+.button-a:active {
+    box-shadow: none;
+    top: 5px;
+}
+
+
