--- a/Pages/Impianti.razor
+++ b/Pages/Impianti.razor
@@ -45,10 +45,13 @@
                         @onclick="() => AddImpianto(cliente)">
                     <i class="bi bi-plus-circle"></i> Nuovo Impianto
                 </button>
-                *@
                 
                 <button class="button-a" style="display:flex; justify-content:flex-end;" @onclick="() => AddImpianto(cliente)">
-                    Button a 
+                
+                *@
+                
+                <button class="button-a" @onclick="() => AddImpianto(cliente)">
+                    Nuovo Impianto 
                 </button>
 
             </div>
