--- a/css/app.css
+++ b/css/app.css
@@ -193,8 +193,8 @@ code {
 }
 
 .button-a {
-    border: none;
-    background-color: #F891B3;
+    border: none;    
+    background-color: #A8E6CF;
     color: #ffff;
     padding: 10px 20px;
     font-size: 10px;
